# csc299-project

./: README.md
ChatGPT/: ChatGPT.md
Summary/: SUMMARY.md
final/: README.md  pyproject.toml  state.json
final/src/final/: __init__.py  ai_agent.py  commands.py  models.py  storage.py
final/tests/: test_ids.py  test_notes.py  test_search.py  test_storage.py
tasks1/: README.md  main.py  tasks.json
tasks2/: README.md  main.py
tasks3/: README.md  pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: .gitignore  README.md  demo_tasks.json  pyproject.toml
tasks5/.specify/memory/: constitution.md
tasks5/.specify/templates/: plan-template.md
tasks5/specs/1-task-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tasks5/specs/1-task-cli/checklists/: requirements.md
tasks5/specs/1-task-cli/contracts/: cli-contract.md
tasks5/src/: __init__.py  cli.py
tasks5/src/task_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tasks5/src/tasks/: __init__.py  model.py  service.py  storage.py
tasks5/tests/integration/: test_cli_end_to_end.py
tasks5/tests/unit/: test_model.py  test_service.py  test_storage.py
video/: video.txt
