[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shan", email = "sansar20@depaul.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
]

[project.scripts]
final = "final:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
